fixed z-index problems

--- a/sass/base/_global.sass
+++ b/sass/base/_global.sass
@@ -1,2 +1,4 @@
 *
 	font-family: $muliFont
+body
+	overflow-x: hidden
