--- a/sass/components/_navbar-btn.sass
+++ b/sass/components/_navbar-btn.sass
@@ -5,3 +5,4 @@
 	cursor: pointer
 	position: fixed
 	right: 3%
+	z-index: 9999
