--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -1,17 +1,18 @@
 .navbar
-	width: 95vw
-	height: 40px
+	width: 100vw
+	height: 30px
 	display: block
-	position: relative
-	//background-color: orange
+	position: fixed
+	top: 0
+	background-color: #ffffff
 	padding: 30px 0 30px 0
-	margin: 0 auto
 	@import "navbar-btn"
 	.navbar-header-wrapper
 		display: inline-block
 		position: relative
 		transition: $transition
 		width: 100%
+		left: 3%
 		@import "navbar-socials"
 		.navbar-header-text
 			color: #ffffff
